--- a/fifthpage/style.css
+++ b/fifthpage/style.css
@@ -86,12 +86,12 @@ select {
 
 @font-face {
     font-family: 'KyivType Sans2';
-    src: url('/fonts/KyivTypeSans-Regular2.eot');
-    src: url('/fonts/KyivTypeSans-Regular2.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/KyivTypeSans-Regular2.woff2') format('woff2'),
-        url('/fonts/KyivTypeSans-Regular2.woff') format('woff'),
-        url('/fonts/KyivTypeSans-Regular2.ttf') format('truetype'),
-        url('/fonts/KyivTypeSans-Regular2.svg#KyivTypeSans-Regular2') format('svg');
+    src: url('../fonts/KyivTypeSans-Regular2.eot');
+    src: url('../fonts/KyivTypeSans-Regular2.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/KyivTypeSans-Regular2.woff2') format('woff2'),
+        url('../fonts/KyivTypeSans-Regular2.woff') format('woff'),
+        url('../fonts/KyivTypeSans-Regular2.ttf') format('truetype'),
+        url('../fonts/KyivTypeSans-Regular2.svg#KyivTypeSans-Regular2') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -99,12 +99,12 @@ select {
 
 @font-face {
     font-family: 'KyivType Sans Heavy2';
-    src: url('/fonts/KyivTypeSans-Heavy2.eot');
-    src: url('/fonts/KyivTypeSans-Heavy2.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/KyivTypeSans-Heavy2.woff2') format('woff2'),
-        url('/fonts/KyivTypeSans-Heavy2.woff') format('woff'),
-        url('/fonts/KyivTypeSans-Heavy2.ttf') format('truetype'),
-        url('/fonts/KyivTypeSans-Heavy2.svg#KyivTypeSans-Heavy2') format('svg');
+    src: url('../fonts/KyivTypeSans-Heavy2.eot');
+    src: url('../fonts/KyivTypeSans-Heavy2.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/KyivTypeSans-Heavy2.woff2') format('woff2'),
+        url('../fonts/KyivTypeSans-Heavy2.woff') format('woff'),
+        url('../fonts/KyivTypeSans-Heavy2.ttf') format('truetype'),
+        url('../fonts/KyivTypeSans-Heavy2.svg#KyivTypeSans-Heavy2') format('svg');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -112,12 +112,12 @@ select {
 
 @font-face {
     font-family: 'KyivType Serif Bold2';
-    src: url('/fonts/KyivTypeSerif-Bold2.eot');
-    src: url('/fonts/KyivTypeSerif-Bold2.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/KyivTypeSerif-Bold2.woff2') format('woff2'),
-        url('/fonts/KyivTypeSerif-Bold2.woff') format('woff'),
-        url('/fonts/KyivTypeSerif-Bold2.ttf') format('truetype'),
-        url('/fonts/KyivTypeSerif-Bold2.svg#KyivTypeSerif-Bold2') format('svg');
+    src: url('../fonts/KyivTypeSerif-Bold2.eot');
+    src: url('../fonts/KyivTypeSerif-Bold2.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/KyivTypeSerif-Bold2.woff2') format('woff2'),
+        url('../fonts/KyivTypeSerif-Bold2.woff') format('woff'),
+        url('../fonts/KyivTypeSerif-Bold2.ttf') format('truetype'),
+        url('../fonts/KyivTypeSerif-Bold2.svg#KyivTypeSerif-Bold2') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -125,12 +125,12 @@ select {
 
 @font-face {
     font-family: 'KyivType Sans Medium2';
-    src: url('/fonts/KyivTypeSans-Medium2.eot');
-    src: url('/fonts/KyivTypeSans-Medium2.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/KyivTypeSans-Medium2.woff2') format('woff2'),
-        url('/fonts/KyivTypeSans-Medium2.woff') format('woff'),
-        url('/fonts/KyivTypeSans-Medium2.ttf') format('truetype'),
-        url('/fonts/KyivTypeSans-Medium2.svg#KyivTypeSans-Medium2') format('svg');
+    src: url('../fonts/KyivTypeSans-Medium2.eot');
+    src: url('../fonts/KyivTypeSans-Medium2.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/KyivTypeSans-Medium2.woff2') format('woff2'),
+        url('../fonts/KyivTypeSans-Medium2.woff') format('woff'),
+        url('../fonts/KyivTypeSans-Medium2.ttf') format('truetype'),
+        url('../fonts/KyivTypeSans-Medium2.svg#KyivTypeSans-Medium2') format('svg');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -138,12 +138,12 @@ select {
 
 @font-face {
     font-family: 'KyivType Serif Black2';
-    src: url('/fonts/KyivTypeSerif-Black2.eot');
-    src: url('/fonts/KyivTypeSerif-Black2.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/KyivTypeSerif-Black2.woff2') format('woff2'),
-        url('/fonts/KyivTypeSerif-Black2.woff') format('woff'),
-        url('/fonts/KyivTypeSerif-Black2.ttf') format('truetype'),
-        url('/fonts/KyivTypeSerif-Black2.svg#KyivTypeSerif-Black2') format('svg');
+    src: url('../fonts/KyivTypeSerif-Black2.eot');
+    src: url('../fonts/KyivTypeSerif-Black2.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/KyivTypeSerif-Black2.woff2') format('woff2'),
+        url('../fonts/KyivTypeSerif-Black2.woff') format('woff'),
+        url('../fonts/KyivTypeSerif-Black2.ttf') format('truetype'),
+        url('../fonts/KyivTypeSerif-Black2.svg#KyivTypeSerif-Black2') format('svg');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -255,7 +255,7 @@ footer h2 {
     top: 20%;
     width: 22px;
     height: 22px;
-    background-image: url('/img/homepage/footer/handset.svg');
+    background-image: url('../img/homepage/footer/handset.svg');
 }
 
 
