--- a/secondpage/style.css
+++ b/secondpage/style.css
@@ -1,28 +1,30 @@
 body {
-    position: relative;
-    overflow-x: hidden;
-    background: #FFFFFF;
-    color: #070707;
+  position: relative;
+  overflow-x: hidden;
+  background: #ffffff;
+  color: #070707;
 }
 
-li{list-style-type: none;}
+li {
+  list-style-type: none;
+}
 
 *,
 *::before,
 *::after {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Убираем внутренние отступы */
 ul[class],
 ol[class] {
-    padding: 0;
+  padding: 0;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* Убираем внешние отступы */
@@ -40,38 +42,38 @@ figcaption,
 blockquote,
 dl,
 dd {
-    margin: 0;
+  margin: 0;
 }
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
-    min-height: 100vh;
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
-    list-style: none;
+  list-style: none;
 }
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-    -webkit-text-decoration-skip: ink;
-            text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip-ink: auto;
 }
 
 /* Упрощаем работу с изображениями */
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
-article>*+* {
-    margin-top: 1em;
+article > * + * {
+  margin-top: 1em;
 }
 
 /* Наследуем шрифты для инпутов и кнопок */
@@ -79,335 +81,399 @@ input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 /* Fonts */
 
 @font-face {
-    font-family: 'KyivType Sans2';
-    src: url('../fonts/KyivTypeSans-Regular2.eot');
-    src: url('../fonts/KyivTypeSans-Regular2.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/KyivTypeSans-Regular2.woff2') format('woff2'),
-        url('../fonts/KyivTypeSans-Regular2.woff') format('woff'),
-        url('../fonts/KyivTypeSans-Regular2.ttf') format('truetype'),
-        url('../fonts/KyivTypeSans-Regular2.svg#KyivTypeSans-Regular2') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "KyivType Sans2";
+  src: url("../fonts/KyivTypeSans-Regular2.eot");
+  src: url("../fonts/KyivTypeSans-Regular2.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/KyivTypeSans-Regular2.woff2") format("woff2"),
+    url("../fonts/KyivTypeSans-Regular2.woff") format("woff"),
+    url("../fonts/KyivTypeSans-Regular2.ttf") format("truetype"),
+    url("../fonts/KyivTypeSans-Regular2.svg#KyivTypeSans-Regular2")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'KyivType Sans Heavy2';
-    src: url('../fonts/KyivTypeSans-Heavy2.eot');
-    src: url('../fonts/KyivTypeSans-Heavy2.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/KyivTypeSans-Heavy2.woff2') format('woff2'),
-        url('../fonts/KyivTypeSans-Heavy2.woff') format('woff'),
-        url('../fonts/KyivTypeSans-Heavy2.ttf') format('truetype'),
-        url('../fonts/KyivTypeSans-Heavy2.svg#KyivTypeSans-Heavy2') format('svg');
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
+  font-family: "KyivType Sans Heavy2";
+  src: url("../fonts/KyivTypeSans-Heavy2.eot");
+  src: url("../fonts/KyivTypeSans-Heavy2.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/KyivTypeSans-Heavy2.woff2") format("woff2"),
+    url("../fonts/KyivTypeSans-Heavy2.woff") format("woff"),
+    url("../fonts/KyivTypeSans-Heavy2.ttf") format("truetype"),
+    url("../fonts/KyivTypeSans-Heavy2.svg#KyivTypeSans-Heavy2") format("svg");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'KyivType Serif Bold2';
-    src: url('../fonts/KyivTypeSerif-Bold2.eot');
-    src: url('../fonts/KyivTypeSerif-Bold2.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/KyivTypeSerif-Bold2.woff2') format('woff2'),
-        url('../fonts/KyivTypeSerif-Bold2.woff') format('woff'),
-        url('../fonts/KyivTypeSerif-Bold2.ttf') format('truetype'),
-        url('../fonts/KyivTypeSerif-Bold2.svg#KyivTypeSerif-Bold2') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "KyivType Serif Bold2";
+  src: url("../fonts/KyivTypeSerif-Bold2.eot");
+  src: url("../fonts/KyivTypeSerif-Bold2.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/KyivTypeSerif-Bold2.woff2") format("woff2"),
+    url("../fonts/KyivTypeSerif-Bold2.woff") format("woff"),
+    url("../fonts/KyivTypeSerif-Bold2.ttf") format("truetype"),
+    url("../fonts/KyivTypeSerif-Bold2.svg#KyivTypeSerif-Bold2") format("svg");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'KyivType Sans Medium2';
-    src: url('../fonts/KyivTypeSans-Medium2.eot');
-    src: url('../fonts/KyivTypeSans-Medium2.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/KyivTypeSans-Medium2.woff2') format('woff2'),
-        url('../fonts/KyivTypeSans-Medium2.woff') format('woff'),
-        url('../fonts/KyivTypeSans-Medium2.ttf') format('truetype'),
-        url('../fonts/KyivTypeSans-Medium2.svg#KyivTypeSans-Medium2') format('svg');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "KyivType Sans Medium2";
+  src: url("../fonts/KyivTypeSans-Medium2.eot");
+  src: url("../fonts/KyivTypeSans-Medium2.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/KyivTypeSans-Medium2.woff2") format("woff2"),
+    url("../fonts/KyivTypeSans-Medium2.woff") format("woff"),
+    url("../fonts/KyivTypeSans-Medium2.ttf") format("truetype"),
+    url("../fonts/KyivTypeSans-Medium2.svg#KyivTypeSans-Medium2") format("svg");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'KyivType Serif Black2';
-    src: url('../fonts/KyivTypeSerif-Black2.eot');
-    src: url('../fonts/KyivTypeSerif-Black2.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/KyivTypeSerif-Black2.woff2') format('woff2'),
-        url('../fonts/KyivTypeSerif-Black2.woff') format('woff'),
-        url('../fonts/KyivTypeSerif-Black2.ttf') format('truetype'),
-        url('../fonts/KyivTypeSerif-Black2.svg#KyivTypeSerif-Black2') format('svg');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
+  font-family: "KyivType Serif Black2";
+  src: url("../fonts/KyivTypeSerif-Black2.eot");
+  src: url("../fonts/KyivTypeSerif-Black2.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/KyivTypeSerif-Black2.woff2") format("woff2"),
+    url("../fonts/KyivTypeSerif-Black2.woff") format("woff"),
+    url("../fonts/KyivTypeSerif-Black2.ttf") format("truetype"),
+    url("../fonts/KyivTypeSerif-Black2.svg#KyivTypeSerif-Black2") format("svg");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 /* Main code */
 
 .wrapper {
-    max-width: 1654px;
-    margin: 0 auto;
+  max-width: 1654px;
+  margin: 0 auto;
 }
 
 /* Header */
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 167px;
-    padding: 0 37px;
-    margin-bottom: 115px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 167px;
+  padding: 0 37px;
+  margin-bottom: 115px;
 }
 header::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 167px;
-    width: 100vw;
-    height: 1px;
-    background-color: #C1C1C1;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 167px;
+  width: 100vw;
+  height: 1px;
+  background-color: #c1c1c1;
 }
 
 header ul {
-    display: flex;
-    gap: 60px;
+  display: flex;
+  gap: 60px;
 }
 
+header li {
+  position: relative;
+}
+
+header li::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #000;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  display: block;
+  transition: 0.3s;
+  transform: translate(-50%, -50%) scaleX(0);
+}
+
+header li:hover::after {
+  transform: translate(-50%, -50%) scaleX(1);
+}
 
 header a {
-    text-decoration: none;
-    font-family: 'KyivType Sans2';
-    font-style: normal;
-    font-weight: 350;
-    font-size: 22px;
-    line-height: 26px;
-    color: #000;
+  text-decoration: none;
+  font-family: "KyivType Sans2";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000;
 }
 
-.burger {
-    display: none;
+.burger_open {
+  display: none;
 }
-
 
 /* Main block */
 
-
 .main_firstpart {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 100px;
-    margin-bottom: 35px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 100px;
+  margin-bottom: 35px;
 }
 
 .main_firstpart div {
-    position: relative;
-    margin-top: 29px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 30px;
+  position: relative;
+  margin-top: 29px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
 }
 
 .main_firstpart div::after {
-    content: '';
-    position: absolute;
-    left: -5%;
-    bottom: 10%;
-    width: 718px;
-    height: 1px;
-    background-color: #C1C1C1;
+  content: "";
+  position: absolute;
+  left: -5%;
+  bottom: 10%;
+  width: 718px;
+  height: 1px;
+  background-color: #c1c1c1;
 }
 
 .main_firstpart h2 {
-    font-family: 'KyivType Sans Medium2';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 48px;
+  font-family: "KyivType Sans Medium2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
 }
 
 .main_firstpart h3 {
-    font-family: 'Kyivtype Sans2';
-    font-style: normal;
-    font-weight: 350;
-    font-size: 24px;
-    line-height: 31px;
+  font-family: "Kyivtype Sans2";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 24px;
+  line-height: 31px;
 }
-
 
 h1 {
-    margin-bottom: 100px;
-    font-family: 'KyivType Sans Heavy2';
-    font-style: normal;
-    font-weight: 840;
-    font-size: 48px;
-    line-height: 58px;
-    text-align: center;
+  margin-bottom: 100px;
+  font-family: "KyivType Sans Heavy2";
+  font-style: normal;
+  font-weight: 840;
+  font-size: 48px;
+  line-height: 58px;
+  text-align: center;
 }
-
 
 .main_secondpart {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 100px;
-    text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 100px;
+  text-align: center;
 }
-
 
 .main_secondpart ul li:nth-child(1) {
-    font-family: 'KyivType Sans Medium2';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 48px;
-    margin-bottom: 8px;
+  font-family: "KyivType Sans Medium2";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  margin-bottom: 8px;
 }
 .main_secondpart ul li:nth-child(2) {
-    font-family: 'KyivType Sans2';
-    font-style: normal;
-    font-weight: 350;
-    font-size: 22px;
-    line-height: 26px;
-    margin-bottom: 68px;
+  font-family: "KyivType Sans2";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 22px;
+  line-height: 26px;
+  margin-bottom: 68px;
 }
 
 .main_secondpart div:nth-child(3) ul:nth-child(1) li:nth-child(2) {
-    margin-bottom: 42px;
+  margin-bottom: 42px;
 }
 
 /* Footer */
 
 footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 180px;
-    margin-top: 236px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 180px;
+  margin-top: 236px;
 }
 footer::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 180px;
-    width: 100vw;
-    height: 1px;
-    background-color: #C1C1C1;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 180px;
+  width: 100vw;
+  height: 1px;
+  background-color: #c1c1c1;
 }
 
 .footer_social-media {
-    display: flex;
-    gap: 15px;
-    align-items: center;
+  display: flex;
+  gap: 15px;
+  align-items: center;
 }
-
 
 footer h2 {
-    font-family: 'KyivType Sans2';
-    font-style: normal;
-    font-weight: 350;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
+  font-family: "KyivType Sans2";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
 }
-
 
 .footer_number {
-    position: relative;
-    text-decoration: none;
-    font-family: 'KyivType Sans2';
-    font-style: normal;
-    font-weight: 350;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
-    color: #000;
+  position: relative;
+  text-decoration: none;
+  font-family: "KyivType Sans2";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #000;
 }
 .footer_number::before {
-    content: '';
+  content: "";
+  position: absolute;
+  left: -18%;
+  top: 20%;
+  width: 22px;
+  height: 22px;
+  background-image: url("../img/homepage/footer/handset.svg");
+}
+
+@media (max-width: 1280px) {
+header {
+    padding: 0;
+  }
+  header ul {
+    display: none;
+  }
+  .burger {
     position: absolute;
-    left: -18%;
-    top: 20%;
-    width: 22px;
-    height: 22px;
-    background-image: url('../img/homepage/footer/handset.svg');
+    right: 80px;
+    margin-right: 0;
+    display: block;
+  }
+  .burger span {
+    transition: 0.3s linear;
+    position: absolute;
+    width: 39px;
+    height: 2px;
+    background-color: #000;
+  }
+  .burger span:last-child {
+    margin-top: 17px;
+  }
+  .burger span::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    right: 0;
+    width: 30px;
+    height: 2px;
+    background-color: #000;
+    z-index: 999;
+  } 
+
+/* Burger active properties */
+
+  header img {
+    z-index: 10;
+  }
+  .burger.cross {
+    z-index: 5;
+    right: 6.5%;
+  }
+  .burger.cross span {
+    width: 39px;
+  }
+  .burger.cross span:nth-child(1) {
+    transform: rotate(45deg);
+  }
+  .burger.cross span:nth-child(2) {
+    top: 0;
+    margin-top: 0;
+    transform: rotate(-45deg);
+  }
+  .burger.cross span::after {
+    display: none;
+  }
+  .burger_open.active {
+    min-width: 50%;
+    min-height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 4;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .burger_open_body {
+  }
+  .burger_open_body ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .burger_open_body li {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+  }
 }
 
+@media (max-width: 1260px) {
+  .main_firstpart {
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 130px;
+  }
 
-@media(max-width: 1260px) {
-    .main_firstpart {
-        justify-content: center;
-        text-align: center;
-        margin-bottom: 130px;
-    }
-
-    .main_firstpart div::after {
-        left: 1.5%;
-        bottom: -30%;
-    }
+  .main_firstpart div::after {
+    left: 1.5%;
+    bottom: -30%;
+  }
 }
-@media(max-width: 1280px) {
 
-    header {
-        padding: 0;
-    }
+@media (max-width: 780px) {
+  header img {
+    max-width: 60vw;
+  }
 
-    header ul {
-        display: none;
-    }
+  .main_firstpart div::after {
+    display: none;
+  }
 
-    .burger {
-        position: relative;
-        right: 80px;
-        margin-right: 0;
-        display: block;
-    }
+  .main_firstpart {
+    margin-bottom: 250px;
+  }
 
-    .burger span {
-        position: absolute;
-        width: 39px;
-        height: 2px;
-        background-color: #000;
-    }
-
-    .burger span:last-child {
-        margin-top: 17px;
-    }
-
-    .burger span::after {
-        content: '';
-        position: absolute;
-        top: 8px;
-        right: 0;
-        width: 30px;
-        height: 2px;
-        background-color: #000;
-    }
-}
-@media(max-width: 780px) {
-
-    header img {
-        max-width: 60vw;
-    }
-
-    .main_firstpart div::after {
-        display: none;
-    }
-
-
-    .main_firstpart {
-        margin-bottom: 250px;
-    }
-
-    footer {
-        padding-top: 10px;
-        flex-direction: column;
-    }
+  footer {
+    padding-top: 10px;
+    flex-direction: column;
+  }
 }
