--- a/secondpage/style.css
+++ b/secondpage/style.css
@@ -405,8 +405,10 @@ header {
     z-index: 10;
   }
   .burger.cross {
+    position: fixed;
     z-index: 5;
-    right: 6.5%;
+    right: 27.1%;
+    top: 10%;
   }
   .burger.cross span {
     width: 39px;
